src/objects/c2g__codaIntercompanyTransfer__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpintercompanytransfer</customHelpPage>
    <description>An intermediate staging object used during the intercompany journal process.</description>
    <fields>
        <fullName>c2g__CanceledIntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Canceled Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Canceling Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationCashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Cash Entry Number</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Destination Cash Entry)</relationshipLabel>
        <relationshipName>IntercompanyTransfers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Destination Company)</relationshipLabel>
        <relationshipName>Intercompany_Staging1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDocumentBankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Document Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Destination Document Bank Account)</relationshipLabel>
        <relationshipName>IntercompanyTransfers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Document Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Destination Document Currency)</relationshipLabel>
        <relationshipName>DestinationIntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDocumentPaymentMethod__c</fullName>
        <label>DEPRECATED: Destination Doc Pay Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DestinationDocumentPeriod__c</fullName>
        <formula>IF( ISBLANK( c2g__DestinationCashEntry__c ), &apos;&apos;, c2g__DestinationCashEntry__r.c2g__Period__r.Name)</formula>
        <label>Destination Document Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDocumentReference__c</fullName>
        <label>Destination Document Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDocumentTotal__c</fullName>
        <formula>IF( ISBLANK( c2g__DestinationPayableInvoice__c ), c2g__DestinationPayableCreditNote__r.c2g__CreditNoteTotal__c, c2g__DestinationPayableInvoice__r.c2g__InvoiceTotal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Document Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationDocumentType__c</fullName>
        <label>Destination Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Receipt</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Payment Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__DestinationJournalDate__c</fullName>
        <formula>IF( ISBLANK( c2g__DestinationPayableInvoice__c ), IF( ISBLANK( c2g__DestinationPayableCreditNote__c ), IF( ISBLANK(c2g__DestinationCashEntry__c), c2g__DestinationJournal__r.c2g__JournalDate__c, c2g__DestinationCashEntry__r.c2g__Date__c ), c2g__DestinationPayableCreditNote__r.c2g__CreditNoteDate__c ), c2g__DestinationPayableInvoice__r.c2g__InvoiceDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationJournalDescription__c</fullName>
        <label>Destination Document Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationJournalReference__c</fullName>
        <formula>IF(ISBLANK( c2g__DestinationCashEntry__c ), IF( ISBLANK( c2g__DestinationPayableInvoice__c ), IF( ISBLANK( c2g__DestinationPayableCreditNote__c ), c2g__DestinationJournal__r.c2g__Reference__c, c2g__DestinationPayableCreditNote__r.c2g__Reference1__c &amp; IF(ISBLANK(c2g__DestinationPayableCreditNote__r.c2g__Reference1__c) || ISBLANK(c2g__DestinationPayableCreditNote__r.c2g__Reference2__c), &apos;&apos;, &apos;, &apos;) &amp; c2g__DestinationPayableCreditNote__r.c2g__Reference2__c ), c2g__DestinationPayableInvoice__r.c2g__Reference1__c &amp; IF(ISBLANK(c2g__DestinationPayableInvoice__r.c2g__Reference1__c) || ISBLANK(c2g__DestinationPayableInvoice__r.c2g__Reference2__c), &apos;&apos;, &apos;, &apos;) &amp; c2g__DestinationPayableInvoice__r.c2g__Reference2__c ), c2g__SourceCashEntry__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Document Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Journal Number</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Destination Journal)</relationshipLabel>
        <relationshipName>Intercompany_Staging1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationPayableCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Payable Credit Note Number</label>
        <referenceTo>c2g__codaPurchaseCreditNote__c</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationPayableInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Payable Invoice Number</label>
        <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentRate__c</fullName>
        <description>The document to home exchange rate.</description>
        <label>Document Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DualRate__c</fullName>
        <description>The dual to home exchange rate.</description>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__ProcessingMessages__c</fullName>
        <label>Processing Messages</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__ProcessingStatus__c</fullName>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__RejectReason__c</fullName>
        <label>Reason for Rejection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__SourceCashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Cash Entry Number</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Source Cash Entry)</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Company)</relationshipLabel>
        <relationshipName>Intercompany_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentBankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Document Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Source Document Bank Account)</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Document Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfersSource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentDate__c</fullName>
        <label>Source Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentName__c</fullName>
        <formula>IF( ISBLANK( c2g__SourceSalesInvoice__c ), IF( ISBLANK( c2g__SourceSalesCreditNote__c ), IF( ISBLANK( c2g__SourceCashEntry__c ), c2g__SourceJournal__r.Name, c2g__SourceCashEntry__r.Name), c2g__SourceSalesCreditNote__r.Name ), c2g__SourceSalesInvoice__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Document Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentPeriod__c</fullName>
        <formula>IF( ISBLANK( c2g__SourceCashEntry__c ), &apos;&apos;, c2g__SourceCashEntry__r.c2g__Period__r.Name)</formula>
        <label>Source Document Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentReference__c</fullName>
        <label>Source Document Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentTotal1__c</fullName>
        <label>Source Document Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentTotal__c</fullName>
        <formula>IF( ISBLANK( c2g__SourceSalesInvoice__c ), c2g__SourceSalesCreditNote__r.c2g__CreditNoteTotal__c, c2g__SourceSalesInvoice__r.c2g__InvoiceTotal__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Document Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentType__c</fullName>
        <label>Source Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Receipt</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Payment Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__SourceDocumentVendorAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Document Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceJournalDate__c</fullName>
        <formula>IF( ISBLANK( c2g__SourceSalesInvoice__c ), IF( ISBLANK( c2g__SourceSalesCreditNote__c ), IF( ISBLANK( c2g__SourceJournal__c ), c2g__SourceCashEntry__r.c2g__Date__c, c2g__SourceJournal__r.c2g__JournalDate__c ), c2g__SourceSalesCreditNote__r.c2g__CreditNoteDate__c ), c2g__SourceSalesInvoice__r.c2g__InvoiceDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Document Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__SourceJournalDescription__c</fullName>
        <label>Source Document Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__SourceJournalReference__c</fullName>
        <formula>IF( ISBLANK( c2g__SourceSalesInvoice__c ), IF( ISBLANK( c2g__SourceSalesCreditNote__c ),  c2g__SourceJournal__r.c2g__Reference__c, c2g__SourceSalesCreditNote__r.c2g__CustomerReference__c ),  c2g__SourceSalesInvoice__r.c2g__CustomerReference__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEPRECATED: Source Document Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SourceJournal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Journal Number</label>
        <referenceTo>c2g__codaJournal__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Source Journal)</relationshipLabel>
        <relationshipName>Intercompany_Staging</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourcePayableCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Payable Credit Note Number</label>
        <referenceTo>c2g__codaPurchaseCreditNote__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Source Payable Credit Note Number)</relationshipLabel>
        <relationshipName>IntercompanyTransfers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourcePayableInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Payable Invoice Number</label>
        <referenceTo>c2g__codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Intercompany Transfers (Source Payable Invoice Number)</relationshipLabel>
        <relationshipName>IntercompanyTransfers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceSalesCreditNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Sales Credit Note Number</label>
        <referenceTo>c2g__codaCreditNote__c</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SourceSalesInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Sales Invoice Number</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Intercompany Transfers</relationshipLabel>
        <relationshipName>IntercompanyTransfers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Version__c</fullName>
        <label>Check optimistic locks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Intercompany Transfer</label>
    <listViews>
        <fullName>FF_100_Bruntwood_Management_Services_L_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 100 - Bruntwood Management Services L</label>
        <queue>FF_100_Bruntwood_Management_Services_L</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_106_Bruntwood_Management_Services_3_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 106 - Bruntwood Management Services(3</label>
        <queue>FF_106_Bruntwood_Management_Services_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_110_Manchester_Science_Partnerships_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 110 - Manchester Science Partnerships</label>
        <queue>FF_110_Manchester_Science_Partnerships</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_112_Mi_IDEA_Limited_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 112 - Mi-IDEA Limited</label>
        <queue>FF_112_Mi_IDEA_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_113_Citylabs_2_0_Limited_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 113 - Citylabs 2.0 Limited</label>
        <queue>FF_113_Citylabs_2_0_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_115_Manchester_Technopark_Ltd_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 115 - Manchester Technopark Ltd</label>
        <queue>FF_115_Manchester_Technopark_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_125_Salford_Innovation_Park_Ltd_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 125 - Salford Innovation Park Ltd</label>
        <queue>FF_125_Salford_Innovation_Park_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_130_Principal_Agent_Management_Ltd_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 130 - Principal Agent Management Ltd</label>
        <queue>FF_130_Principal_Agent_Management_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_135_Alderley_Park_Holdings_Ltd_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 135 - Alderley Park Holdings Ltd</label>
        <queue>FF_135_Alderley_Park_Holdings_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_139_Alderley_Imaging_Limited_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 139 - Alderley Imaging Limited</label>
        <queue>FF_139_Alderley_Imaging_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_140_Alderley_Park_Limited_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 140 - Alderley Park Limited</label>
        <queue>FF_140_Alderley_Park_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_141_Circle_Square_District_Holdings_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 141 - Circle Square District Holdings</label>
        <queue>FF_141_Circle_Square_District_Holdings</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_142_Circle_Square_District_Company_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 142 - Circle Square District Company</label>
        <queue>FF_142_Circle_Square_District_Company</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_143_Circle_Square_Green_Company_Ltd_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 143 - Circle Square Green Company Ltd</label>
        <queue>FF_143_Circle_Square_Green_Company_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_144_Bruntwood_Circle_Square_2_Limit_codaIntercompanyTransfer</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 144 - Bruntwood Circle Square 2 Limit</label>
        <queue>FF_144_Bruntwood_Circle_Square_2_Limit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ICT{000000}</displayFormat>
        <label>Intercompany Transfer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intercompany Transfers</pluralLabel>
    <recordTypes>
        <fullName>c2g__IntercompanyCancelingJournals</fullName>
        <active>true</active>
        <description>The source document is a canceling journal. This option provides access to the intercompany transfer canceling journal page layout.</description>
        <label>Intercompany Canceling Journals</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__IntercompanyCashEntries</fullName>
        <active>true</active>
        <description>The source document is a cash entry. This option provides access to the inter company transfer cash entry page layout.</description>
        <label>Intercompany Cash Entries</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__IntercompanyJournals</fullName>
        <active>true</active>
        <description>The source document is a journal. This option provides access to the inter company transfer journal page layout.</description>
        <label>Intercompany Journals</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__IntercompanySales</fullName>
        <active>true</active>
        <description>The source document is a sales invoice. This option provides access to the inter company transfer sales invoice page layout.</description>
        <label>Intercompany Sales</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__IntercompanySalesCredit</fullName>
        <active>true</active>
        <description>The source document is a sales credit note. This option provides access to the inter company transfer sales credit note page layout.</description>
        <label>Intercompany Sales Credit</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__IntercompanyforCentralizedBuyingPayableCreditNote</fullName>
        <active>true</active>
        <description>The source document is a payable credit note. This option provides access to the inter company transfer payable credit note page layout.</description>
        <label>Intercompany for Centralized Buying - Payable Credit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__IntercompanyforCentralizedBuyingPayableInvoice</fullName>
        <active>true</active>
        <description>The source document is a payable invoice. This option provides access to the inter company transfer payable  invoice page layout.</description>
        <label>Intercompany for Centralized Buying - Payable Invoice</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__IntercompanyforCentralizedSellingSalesCreditNote</fullName>
        <active>true</active>
        <description>The source document is a sales credit note. This option provides access to the inter company transfer sales credit note page layout. The sales credit note will facilitate Selling on Behalf.</description>
        <label>Intercompany for Centralized Selling - Sales Credit Note</label>
    </recordTypes>
    <recordTypes>
        <fullName>c2g__IntercompanyforCentralizedSellingSalesInvoice</fullName>
        <active>true</active>
        <description>The source document is a sales invoice. This option provides access to the inter company transfer sales invoice page layout. The sales invoice will facilitate Selling on Behalf.</description>
        <label>Intercompany for Centralized Selling - Sales Invoice</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>